--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #CEB887;
+  background-color: #FFF;
 }
 
 header {
@@ -8,20 +8,15 @@ header {
   border-bottom: 2px solid #101a45;
 }
 
-header p {
-  color: #9c7f3b;
-  font-size: 20px;
-}
-
 header img {
-  width: 20%;
+  width: 15%;
   display: block;
   margin: 0px auto 10px;
 }
 
 footer {
-  background-color: #9c7f3b;
-  margin-top:10px;
+  background-color: #616b8b;
+  margin-top: 50px;
   bottom: 0px;
   width: 100%;
   border-top: 2px solid #101a45;
@@ -29,10 +24,43 @@ footer {
 }
 
 footer p {
- color: #FFF;
+ color: #cdd2e2;
  padding-left: 10px;
  margin-bottom: 0px;
 
+}
+
+#color-bar {
+  background-color: #616b8b;
+  height: 30px;
+}
+
+#info{
+  background-color: #FFF;
+  height: 75px;
+}
+
+#info p {
+  color: #000;
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+#info ul {
+  margin: 0px auto;
+  width: 25%;
+}
+
+#info ul li {
+ display: inline;
+ font-size: 16px;
+ font-style: italic;
+ color: #101a45;
+ margin-right: 2%;
+}
+
+#info ul li:last-child {
+  color:#76643e;
 }
 
 .center-text {
@@ -40,8 +68,14 @@ footer p {
 }
 
 .seat-chart {
+  /*background-color: #e7d4ab;*/
+  /*background-color: #616b8b;*/
+  background-color: rgba(97,107,139, .2);
   width: 90%;
-  margin: 50px auto 0px;
+  margin: 0px auto 0px;
+  padding: 1.5%;
+  border: 1px solid #616b8b;
+  border-radius: 10px;
 }
 
 .available {
